# lpkg

./: .gitignore  Cargo.toml  README.md  VISION.md  install.sh  uninstall.sh
docs/: architecture.md  contributing.md  flutter_packaging.md
src/: main.rs  mod.rs
src/commands/: info.rs  init.rs  install.rs  list.rs  mod.rs  pack.rs  remove.rs  repo.rs  rollback.rs  setup.rs  sign.rs  update.rs  verify.rs
src/commands/init_handlers/: flutter.rs  mod.rs  rust.rs
src/db/: connection.rs  mod.rs  operations.rs  schema.rs
src/package/: archive.rs  metadata.rs  mod.rs
src/repository/: mod.rs
src/utils/: checksum.rs  file_ops.rs  mod.rs
tests/: common.rs
